--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jquery": "^1.9.1",
     "resolve-url-loader": "^2.3.0",
     "vue": "^2.5.11",
+    "vue-router": "^3.0.1",
+    "vue-yandex-maps": "^0.7.9",
     "vuex": "^3.0.1"
   },
   "browserslist": [
